Fixes blurry font in richtext

--- a/less/modules/layout.less
+++ b/less/modules/layout.less
@@ -17,6 +17,7 @@ h4,
 h5,
 h6 {
   font-family: @font-family-headline-bold;
+  font-weight: 400;
   text-transform: uppercase;
 }
 
